--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 :root {
   --background: #ffffff;
@@ -10,6 +11,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-major-mono: var(--font-major-mono);
+  --font-albert-sans: var(--font-albert-sans);
 }
 
 @media (prefers-color-scheme: dark) {
